tests/paczka1/fuzzy1/60071330.err
Error in line 1: WUV3Z A613 55,1
Error in line 7: WUV3Z A721 42,7
Error in line 2: zyQq5g5d S556 4,1
Error in line 14: DY1v8tgka A613 M8,M
Error in line 15: c1AxH S556 10,8
Error in line 10: DY1v8tgka S556 75,9
Error in line 29: DY1v8tgka A613 336,8
Error in line 35: c1AxH S556 71,9
Error in line 39: DY1v8tgka A613 48,60
Error in line 26: S556 A721 5,4
